--- a/style.css
+++ b/style.css
@@ -4,13 +4,14 @@ body{
     margin: 0%;
 }
 
-#Mission-Color{
+.Color{
     color: darkorange;
 }
 h1{
     font-size: 50px;
     line-height: 30px;
 }
+
 .Top {
         border-left:3px solid;
         border-color:red;
@@ -25,7 +26,6 @@ h1{
 
 .half-width img{
     margin-right: 40%;
-    margin-bottom: 15%;
     width: 60%;
 }
 #top-para{
@@ -54,4 +54,63 @@ h1{
     padding: 10px 40px;
     border-radius: 5px;
     margin-left: 10%;
+}
+h2{
+    font-size: 45px;
+    font-family:Arial, Helvetica, sans-serif;
+    text-align:center;
+
+}
+
+#Mission{
+    width: 20%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
+    text-align: justify;
+    border-radius: 30px;
+    background-color:rgba(197, 212, 218, 0.404);
+    margin-left:9%;
+    margin-top:1%;
+}
+#vission{
+    width: 20%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
+    text-align: justify;
+    border-radius: 30px;
+    background-color:rgba(207, 150, 177, 0.404);
+    margin-left:1%;
+    margin-top:1%;
+}
+#goal{
+    width: 20%;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
+    text-align: justify;
+    border-radius: 30px;
+    background-color:rgba(197, 193, 130, 0.404);
+    margin-left:1%;
+    margin-top:1%;
+}
+
+#Mission img{
+    width: 50%;
+}
+#vission img{
+    width: 50%;
+}
+#goal img{
+    width: 50%;
+}
+
+.middle-banner{
+    background-image: url(images/shapes/middle-banner.jpg);
+    background-repeat: no-repeat;
+    background-position: right;
 }
