--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ h3{
 
 }
 h4{
-    margin-top: 15%;
+    margin-top: 10%;
     font-size: 40px;
     line-height: 0%;
 
@@ -162,6 +162,20 @@ h4{
     width: 55%;
     margin-Right: 30%;
     margin-left: 20%;
+}
+
+.Fifth-para{
+    margin-left: 10%;
+    margin-right:1%;
+    text-align: justify;
+    padding-right: 10%;
+    
+}
+
+.picture-fifth img{
+    width: 80%;
+    margin-Right: 20%;
+    margin-left: 35%;
 }
 
 footer p{
